HV-2135 Do not create unnecessary collections copies at runtime
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>